# mbedtls-SGX

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  README.md  include
example/: CMakeLists.txt
example/common/: ssl_context.h
example/enclave/: CMakeLists.txt  Enclave.edl  Enclave_t.h  ecalls.cpp  s_client.c  s_server.c  ssl_conn_hdlr.cpp  ssl_conn_hdlr.h
example/hybrid-encryption/: CMakeLists.txt  base64.c  base64.h  enc.cpp  enc.h  hdec.cpp  henc.cpp  hexdump.c  hexdump.h  hkeygen.cpp  hkeygen.h  hybrid.cpp  hybrid_cipher.cpp  hybrid_cipher.h  utils.cpp  utils.h
example/linux/: Makefile  include
example/linux/App/: CMakeLists.txt  Enclave_u.c  Enclave_u.h  Main.cpp  mbedtls_net.c  s_client.cpp  ssl_pthread_server.cpp
example/linux/Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl  Enclave_t.c  Enclave_t.h  ecalls.c  mbedtls_sgx.edl  pprint.c  s_client.c  s_server.c
example/mbedtls_SGX-2.6.0/include/mbedtls/: glue.h
example/tls/: CMakeLists.txt
example/untrusted/: CMakeLists.txt  Enclave_u.h  m_server.cpp  mbedtls_net.c
lib/: include  mbedtls_sgx.edl
mbedtls_t/: .gitignore  TLSlib.sln  TLSlib.vcxproj  TLSlib.vcxproj.filters  mbedtls_t.sln  mbedtls_t.vcxproj  mbedtls_t.vcxproj.filters  mbedtls_t_t.h
mbedtls_t/mbedtls-2.2.1/include/mbedtls/: platform.h
ocall/: CMakeLists.txt  Makefile  net_ocalls.c  std_ocalls.c
src/: CMakeLists.txt  Makefile  glue.c  log.c  log.h  mbedtls_sgx.edl  mbedtls_tlib_t.h
src/mbedtls-2.2.1/include/: glue.h  mbedtls_tlib.h
src/mbedtls-2.2.1/include/mbedtls/: config.h  dummy.h  platform.h
trusted/: CHANGELOG  CMakeLists.txt  Makefile  glue.c  mbedtls_SGX.edl  net_sockets_proxy.c
trusted/mbedtls-2.16.1/include/mbedtls/: config.h  net_sockets.h
trusted/mbedtls-2.17.0/configs/: config-sgx.h
trusted/mbedtls-2.17.0/include/: CMakeLists.txt
trusted/mbedtls-2.17.0/include/mbedtls/: net_sockets.h
trusted/mbedtls-2.6.0/configs/: config-sgx.h
trusted/mbedtls-2.6.0/include/: CMakeLists.txt
trusted/mbedtls-2.6.0/include/mbedtls/: config.h  net_sockets.h
untrusted/: CMakeLists.txt
