get_filename_component(MBEDTLS_SGX_ROOT_DIR ".." REALPATH BASE_DIR "${CMAKE_BINARY_DIR}")

set(MBEDTLS_SGX_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-${MBEDTLS_VERSION})
set(MBEDTLS_SGX_INCLUDE_DIR ${MBEDTLS_SGX_ROOT}/include)
set(MBEDTLS_SGX_LIBRARY_DIR ${MBEDTLS_SGX_ROOT}/libs)
set(MBEDTLS_SGX_LIB_U ${MBEDTLS_SGX_LIBRARY_DIR}/libmbedtls_SGX_u.a)
set(MBEDTLS_SGX_LIB_T ${MBEDTLS_SGX_LIBRARY_DIR}/libmbedtls_SGX_t.a)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_subdirectory(untrusted)
add_subdirectory(enclave)
